5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_869.log
== TEST (2019-04-09 10:40:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
if (preco >= 200):
	men = preco - (preco * (5/100))
else:
	men = preco
print(men)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
if (preco >= 200):
	men = preco - (preco * (5/100))
else:
	men = preco
print(men)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:40:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
if (preco >= 200):
	men = preco - (preco * (5/100))
else:
	men = preco
print(men)
-- EXECUTION TIME:
0.143228
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:41:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
if (preco >= 200):
	men = round(preco - (preco * (5/100), 2)
else:
	men = round(preco, 2)
print(men)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = (preco - (preco * (5/100))
if (preco >= 200):
	men = round(desc, 2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = (preco - (preco * (5/100))
if (preco >= 200):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:44:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = (preco - (preco * (5/100))
if (preco >= 200):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:44:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = (preco - (preco * (5/100))
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200.00):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:45:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = (preco - (preco * (5/100))
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200.00):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = (preco - (preco * (5/100))
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200.00):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:47:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = preco - (preco * (5 / 100)
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200.00):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:47:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = preco - (preco * (5 / 100)
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- ERROR:
File "XXXX", line 6
    if (preco >= 200.00):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:48:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = preco - (preco * (5 / 100))
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:48:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("digite o valor da compra: "))
desc = preco - (preco * (5 / 100))
if (preco >= 200.00):
	men = round(desc,2)
else:
	men = round(preco,2)
print(men)
-- EXECUTION TIME:
0.154291
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
